required and used express, body parser, models and mongoose in server.js. added api route, json and html endpoints, set up sever to listen on port 3000

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -20,7 +20,7 @@
 				<h1 id='app-name'>EcoViews</h1>
 			</header>
 
-			<h3><a href='templates/productNew.html'>Product form</a></h3>
+			<h3><a href='templates/productNew.html'>Add a Product</a></h3>
 
 			<section id="products">
 				<div ng-view>
