--- a/client/public/index.html
+++ b/client/public/index.html
@@ -22,9 +22,9 @@
 						<ul>
 							<li><a href='templates/about.html'>About</a></li>
 							<li><a href='templates/signup.html'>Sign Up</a> or <a href='templates/login.html'>Login</a></li>
-							<li><a href='templates/profile.html'>Profile</a>
-							<a href='templates/productIndex.html'>All Products</a>
-							<a href='templates/productNew.html'>Add a Product</a>
+							<li><a href='templates/profile.html'>Profile</a></li>
+							<li><a href='templates/productIndex.html'>All Products</a></li>
+							<li><a href='templates/productNew.html'>Add a Product</a></li>
 						</ul>
 					</nav>
 							
