--- a/client/public/index.html
+++ b/client/public/index.html
@@ -16,26 +16,24 @@
 		<!-- Main div -->
 		<div class="container">
 			<!-- Navbar -->
-			<h1>EcoViews</h1>
-				<h2>Home</h2>
-
-					<nav>
-						<ul>
-							<li><a href='templates/signup.html'>Sign Up</a> or <a href='templates/login.html'>Login</a></li>
-							<li><a href='templates/profile.html'>Profile</a></li>
-							<li><a href='templates/productIndex.html'>All Products</a></li>
-							<li><a href='templates/productNew.html'>Add a Product</a></li>
-						</ul>
-					</nav>
-		<footer>
-			<a href='templates/about.html'>About</a>
-		</footer>
+				<nav>
+					<a href='templates/signup.html'>Sign Up</a> or <a href='templates/login.html'>Login</a>
+					<a href='templates/profile.html'>Profile</a>
+					<a href='templates/productIndex.html'>All Products</a>
+					<a href='templates/productNew.html'>Add a Product</a>		
+				</nav>
+				
+		<h1>EcoViews</h1>
+			<h2>Home</h2>
 			
 						<section id="products">
 							<div ng-view>
 							
 							</div>
 						</section>
+	<footer>
+		<a href='templates/about.html'>About</a>
+	</footer>
 		</div>
 	</body>
 </html>
