updated about and login templates

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <!-- Tell HTML to use Angular -->
-<html ng-app="EcoViews">
+<html>
 <head>
-		<title>EcoViews</title>
+		<title>EcoEvolution</title>
 	<!-- Styles -->
-	<link rel="stylesheet" href="styles/style.css">
+	<link rel="stylesheet" href="styles/style.css"/>
 	<!-- Initialize Angular first-->
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.4/angular.min.js"></script>
     <!-- Initialize Angular Routes -->
@@ -12,7 +12,7 @@
 	<!-- App -->
 	<script src="scripts/app.js"></script>
 </head>
-	<body>
+	<body ng-app=''>
 		<!-- Main div -->
 		<div id='homepage' class="container">
 			<!-- Navbar -->
