sectors route working

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -12,7 +12,7 @@
 	<!-- App -->
 	<script src="scripts/app.js"></script>
 </head>
-	<body ng-app=''>
+	<body ng-app='EcoViews'>
 		<!-- Main div -->
 		<div id='homepage' class="container">
 			<!-- Navbar -->
