--- a/client/public/index.html
+++ b/client/public/index.html
@@ -12,17 +12,21 @@
  <!--    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular-route.js"></script> -->
 	<!-- App -->
 	<script src="scripts/app.js"></script>
+	<script src="/scripts/controllers/productsController.js"></script>
+	<script src="/scripts/controllers/sectorsController.js"></script>
+	<script src="/scripts/controllers/usersController.js"></script>
+	
 </head>
 <!-- Tell HTML to use Angular -->
-	<body ng-app='EcoViews' ng-controller ='mainController'>
+	<body ng-app='EcoViews'>
 		<!-- Main div -->
 		<div id='homepage' class="container">
 			<!-- Navbar -->
 				<nav>
-					<a href='templates/signup.html'>Sign Up</a> or <a href='templates/login.html'>Login</a>
-					<a href='templates/profile.html'>Profile</a>
-					<a href='templates/productIndex.html'>All Products</a>
-					<a href='templates/productNew.html'>Add a Product</a>		
+					<a href='#/signup'>Sign Up</a> or <a href='#/login.html'>Login</a>
+					<a href='#/profile'>Profile</a>
+					<a href='#/products'>All Products</a>
+					<a href='#/products/new'>Add a Product</a>		
 				</nav>
 					<section id="products">
 						<div ng-view>
@@ -31,7 +35,7 @@
 					</section>
 
 			<footer>
-				<a href='templates/about.html'>About</a>
+				<a href='#/about'>About</a>
 			</footer>
 		</div>
 	</body>
