changed name of app

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-		<title>ENVRev</title>
+		<title>EcoRev</title>
 	<!-- Styles -->
 	<link rel="stylesheet" href="styles/style.css"/>
 	<!-- Initialize Angular first-->
@@ -18,7 +18,7 @@
 	
 </head>
 <!-- Tell HTML to use Angular -->
-	<body ng-app='EcoViews'>
+	<body ng-app='EcoRev'>
 		<!-- Main div -->
 		<div id='homepage' class="container">
 			<!-- Navbar -->
