--- a/client/public/index.html
+++ b/client/public/index.html
@@ -23,8 +23,8 @@
 			<!-- Navbar -->
 				<nav>
 					<a href='/#/signup'>Sign Up</a> or 
-					<a href='/#/login.html'>Login</a>
-					<a href='/#/profile'>Profile</a>
+					<a href='/#/login/'>Login</a>
+					<a href='/#/profile/'>Profile</a>
 					<a href='/#/products'>All Products</a>
 					<a href='/#/products/new'>Add a Product</a>		
 				</nav>
